# terribletextviewer

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/: CPM.cmake
src/: Include.hpp  Main.cpp
src/Engine/: FileWatcher.cpp  FileWatcher.hpp  IMEDispatcher.cpp  IMEDispatcher.hpp  ImGuiSubWindow.cpp  ImGuiSubWindow.hpp  ImGuiWindow.cpp  ImGuiWindow.hpp  Window.cpp  Window.hpp
